welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var solEstVert:Boolean = false;
	if(!estFaceMur) {
		avance();
		if(sol == Color.green) {
			solEstVert = true;
		}
		recule();
	}
	return solEstVert;
    // Write your code here
}        
